<resources>
    <string name="app_name">Polymerse</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_link_to_login">Login</string>
    <string name="hint_password">Password: Need to be at least 6 characters</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_signup">Signup</string>
    <string name="auth_failed">Login failed</string>
    <string name="hello_user_string">hello user!</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="learning">Learning</string>
    <string name="sharing">Sharing</string>
    <string name="located">Located At</string>
    <string name="filter">Filter</string>
    <string name="fluency_filter">Fluency Level</string>
    <string name="beginner_filter">Beginner</string>
    <string name="intermediate_filter">Intermediate</string>
    <string name="advanced_filter">Advanced</string>
    <string name="fluent_filter">Fluent</string>
    <string name="role_filter">Roles</string>
    <string name="apply_filters">Apply</string>
    <string name="clear_filters">Clear</string>
    <string name="close_filters">Close</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="begin">Begin</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="fake_profile_name">Hans</string>
    <string name="about_details">About:</string>
    <string name="about_text_details">GUTEN TAG ICH LIEBE DICH DEUTSH</string>
    <string name="review_details">Emily</string>
    <string name="review_date">Jan 2018</string>
    <string name="review_detail_text">ICH LIEBE HANS! ICH LERNE DEUTCH!</string>
    <string name="invite_button_text">Invite</string>
    <string name="message_details">Message</string>
    <string name="last_msg_input_here">Last Msg Input Here</string>
    <string name="title_polymerse">Polymerse</string>
    <string name="suggestions_search_button">search</string>
    <string name="suggested_locations">Or let us suggest a place!</string>
    <string name="block_details">Block</string>
    <string name="message_time">11:00</string>
    <string name="time_msg">10:30</string>

</resources>
